objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Members__c</fullName>
        <description>The number of members in the campaign.</description>
        <inlineHelpText>The number of members in the campaign.</inlineHelpText>
        <label># Members</label>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Answered__c</fullName>
        <description>The number of members that answered the phone.</description>
        <inlineHelpText>The number of members that answered the phone.</inlineHelpText>
        <label># Answered</label>
        <summaryFilterItems>
            <field>CampaignMember.Answered__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Hang_ups__c</fullName>
        <description>The number of members that hung up the phone.</description>
        <inlineHelpText>The number of members that hung up the phone.</inlineHelpText>
        <label># Hang-ups</label>
        <summaryFilterItems>
            <field>CampaignMember.Hang_up__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Paid__c</fullName>
        <description>The number of members that paid for the conference.</description>
        <inlineHelpText>The number of members that paid for the conference.</inlineHelpText>
        <label># Paid</label>
        <summaryFilterItems>
            <field>CampaignMember.Paid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Unpaid__c</fullName>
        <description>The number of members that have not yet paid.</description>
        <inlineHelpText>The number of members that have not yet paid.</inlineHelpText>
        <label># Unpaid</label>
        <summaryFilterItems>
            <field>CampaignMember.Paid__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Campaign_Initiative</fullName>
        <active>true</active>
        <description>Record type for a campaign initiative</description>
        <label>Campaign Initiative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Conference_Campaign</fullName>
        <active>true</active>
        <description>Record type for a conference campaign</description>
        <label>Conference Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Campaign</fullName>
        <active>true</active>
        <description>Record type for an email campaign</description>
        <label>Email Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Telemarketing_Campaign</fullName>
        <active>true</active>
        <description>Record type for a telemarketing campaign</description>
        <label>Telemarketing Campaign</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>